每天进步一点点

--- a/深入理解VUE/day1/17 案例-选项卡.html
+++ b/深入理解VUE/day1/17 案例-选项卡.html
@@ -3,10 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>选项卡</title>
+    <style type="text/css">
+    
+        .tab ul {
+          overflow: hidden;
+          padding: 0;
+          margin: 0;
+        }
+        .tab ul li {
+          box-sizing: border-box;
+          padding: 0;
+          float: left;
+          width: 100px;
+          height: 45px;
+          line-height: 45px;
+          list-style: none;
+          text-align: center;
+          border-top: 1px solid blue;
+          border-right: 1px solid blue;
+          cursor
+        }
+        .tab ul li:first-child {
+          border-left: 1px solid blue;
+        }
+        .tab ul li.active {
+          background-color: orange;
+        }
+        .tab div {
+          width: 500px;
+          height: 300px;
+          display: none;
+          text-align: center;
+          font-size: 30px;
+          line-height: 300px;
+          border: 1px solid blue;
+          border-top: 0px;
+        }
+        .tab div.current {
+          display: block;
+        }
+      </style>
 </head>
 <body>
+    <div id="app">
+        <div class="tab">
+            <ul>
+                <li v-on:click="change(index)" :class="currentIndex==index? 'active':''" v-for="(item, index) in list " :key="index">{{item.title}}</li>
+            </ul>
+            <div :class="currentIndex==index?'current':''" v-for="(item, index) in list" :key="index">
+                <img :src="item.path" alt="苹果">
+            </div>
+        </div>
+    </div>
     <script src="../js/vue.js"></script>
-    <script></script>
+    <script>
+        var app=new Vue({
+            el:'#app',
+            data() {
+                return {
+                    currentIndex:0,
+                    list:[{
+                        id:1,
+                        title:'苹果',
+                        path:'./img/apple.png'
+                    },
+                    {
+                        id:2,
+                        title:'橘子',
+                        path:'./img/orange.png'
+                    },
+                    {
+                        id:3,
+                        title:'柠檬',
+                        path:'./img/lemon.png'
+                    }]
+                }
+            },
+            methods: {
+            change:function(index){
+                this.currentIndex=index
+            }
+        }
+        })
+    </script>
 </body>
 </html>
